2006-08-08  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (scanForDefinition): Handle extended
	'(require [CLASS] "SOURCE")' syntax.
	(importDefinitions): New overloaded method, handles above new cases.
	Parse module if appropriate.
	(importDefinitions): Handle non-compiled class.
	Remove most special handling of immediate mode.

	* configure.in (--with-XQTS): New flag.
	(XQTS_PATH): New substitution variable.

2006-06-28  Per Bothner  <per@bothner.com>

	* kawa/standard/TracedProcedure.java (curIndentSym): Use new
	Symbol.makeUninterned method.
	* Makefile.am: New (always-disabled) PreProcess macro JAXP-QName.

2006-06-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (check_if_Syntax): Inherit macroScope
	if from current TemplateScope.

2006-06-21  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (runString): Call the other run method so that
	getOutputConsumer gets called.

2006-06-16  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair): Remove no-longer-needed
	and non-working handling of xml namespaces.
	(remove): Remove old AutoloadProcedure special handling.
	(asXmlNamespace): Remove unneeded method.
	* kawa/standard/Scheme.java (initSchame): Change "html" definition.

2006-06-09  Per Bothner  <per@bothner.com>

	* kawa/lang/Record.java: No longer implement gnu.mapping.NameMap.

	* kawa/repl.java (compileFiles): Print line number if unexpected
	exception.

2006-06-05  Per Bothner  <per@bothner.com>

	* kawa/standard/export.java (scanForDefinitions): Set and later restore
	current position on exach Pair, for more precise error messages.
	Also, put in partial support for SyntaxForm inputs.

2006-05-31  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run): Update to use new ModuleExp.evalModule call.
	This handles printing of errors - and now also warnings.
	Plus remove redundant runUntilDone.
	* kawa/lang/Eval.java (evalBody): Update ModuleExp.evalModule call.